--- a/_config.yml
+++ b/_config.yml
@@ -15,13 +15,11 @@
 # in the templates via {{ site.myvariable }}.
 title: Bumpels
 author: Axel Rojas Bachem
-email: your-email@example.com
+email: webmaster@bumpels.de
 description: > # this means to ignore newlines until "baseurl:"
-  Write an awesome description for your new site here. You can edit this
-  line in _config.yml. It will appear in your document head meta (for
-  Google search results) and in your feed.xml site description.
+  
 baseurl: "" # the subpath of your site, e.g. /blog
-url: "" # the base hostname & protocol for your site, e.g. http://example.com
+url: "http://bumpels.de" # the base hostname & protocol for your site, e.g. http://example.com
 
 # If you want to link only specific pages in your header, uncomment
 # this and add the path to the pages in order as they should show up
@@ -33,7 +31,7 @@ date_format: "%b %-d, %Y"
 
 show_excerpts: false
 
-google_analytics: xxxxxxxx
+google_analytics: UA-113534066-1
 
 # Build settings
 markdown: kramdown
