--- a/_config.yml
+++ b/_config.yml
@@ -17,7 +17,7 @@ title: Bumpels
 author: Axel Rojas Bachem
 email: webmaster@bumpels.de
 description: > # this means to ignore newlines until "baseurl:"
-  
+  Bumpels are Kumpels.
 baseurl: "" # the subpath of your site, e.g. /blog
 url: "http://bumpels.de" # the base hostname & protocol for your site, e.g. http://example.com
 
@@ -26,15 +26,38 @@ url: "http://bumpels.de" # the base hostname & protocol for your site, e.g. http
 #header_pages:
 # - about.html
 
-# refer to http://shopify.github.io/liquid/filters/date/ 
-date_format: "%b %-d, %Y"
-
 show_excerpts: false
 
+# Basic settings
+encoding: "utf-8"
+timezone: Europe/Berlin
+date_format: "%b %-d, %Y" # refer to http://shopify.github.io/liquid/filters/date/ 
 google_analytics: UA-113534066-1
+
+# default front matter settings
+defaults:
+  -
+    scope:
+      path: ""
+      type: "posts"
+    values:
+      layout: "post"
+  -
+    scope:
+      path: ""
+      type: "drafts"
+    values:
+      layout: "post"
+  -
+    scope:
+      path: ""
+      type: "pages"
+    values:
+      layout: "page"
 
 # Build settings
 markdown: kramdown
+highlighter: rouge
 plugins:
   - jekyll-seo-tag
 
