--- a/_config.yml
+++ b/_config.yml
@@ -28,7 +28,7 @@ twitter: # site-wide twitter account in seo
 # Basic settings
 encoding: "utf-8"
 timezone: Europe/Berlin
-date_format: "%b %-d, %Y" # refer to http://shopify.github.io/liquid/filters/date/ 
+date_format: "%a, %e. %b %y" # refer to http://shopify.github.io/liquid/filters/date/ 
 google_analytics: UA-113534066-1
 permalink: /:categories/:year/:month/:day/:title/
 header_pages: # list of header navigation entries
