--- a/package.json
+++ b/package.json
@@ -10,10 +10,10 @@
         "typescript": "^2.7.2"
     },
     "scripts": {
-        "build": "",
+        "build": "npm run build-css & npm run build-js",
         "build-css": "node-sass --output-style compressed --include-path _sass _sass/main.scss assets/css/style.css",
         "watch-css": "node-sass -w _sass/main.scss assets/css/style.css --source-map assets/css/style.css.map",
-        "build-js": ""
+        "build-js": "echo to be done"
     },
     "author": "Axel Rojas Bachem"
 }
