--- a/package.json
+++ b/package.json
@@ -5,15 +5,11 @@
         "bootstrap": "^4.0.0"
     },
     "devDependencies": {
-        "node-sass": "^4.7.2",
-        "tslint": "^5.9.1",
+        "@types/jquery": "^3.3.0",
+        "gulp": "^3.9.1",
+        "gulp-sass": "^3.1.0",
+        "gulp-typescript": "^4.0.1",
         "typescript": "^2.7.2"
-    },
-    "scripts": {
-        "build": "npm run build-css & npm run build-js",
-        "build-css": "node-sass --output-style compressed --include-path _sass _sass/main.scss assets/css/style.css",
-        "watch-css": "node-sass -w _sass/main.scss assets/css/style.css --source-map assets/css/style.css.map",
-        "build-js": "echo to be done"
     },
     "author": "Axel Rojas Bachem"
 }
