--- a/tsconfig.json
+++ b/tsconfig.json
@@ -8,7 +8,7 @@
         //"sourceMap": true,                     /* Generates corresponding '.map' file. */
         //"outFile": "./",                       /* Concatenate and emit output to single file. */
         "outDir": "assets/js",               /* Redirect output structure to the directory. */
-        //"rootDir": "_typescript",            /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
+        "rootDir": "_typescript",            /* Specify the root directory of input files. Use to control the output directory structure with --outDir. */
         "removeComments": true,                /* Do not emit comments to output. */
 
         /* Additional Checks */                   
