--- a/package.json
+++ b/package.json
@@ -13,7 +13,7 @@
     "scripts": {
         "build": "npm run build-css && npm run build-js && bundle exec jekyll build",
         "build-css": "node-sass --output-style compressed --include-path _sass _sass/main.scss assets/css/main.css",
-        "watch-css": "node-sass -w _sass/main.scss assets/css/main.css --source-map assets/css/main.css.map",
+        "watch-css": "node-sass -w --output-style compressed --include-path _sass _sass/main.scss assets/css/main.css",
         "build-js": "tsc -p .",
         "watch-js": "npm run build-js -- -w",
         "clean": "bundle exec jekyll clean",
