--- a/_data/gallery.yaml
+++ b/_data/gallery.yaml
@@ -1,27 +1,15 @@
 
-- name: Bumpel 1
-  url: /assets/img/bumpels/bumpel_1.svg
+- name: George
+  url: /assets/img/bumpels/bumpel_george.svg
   description: n/a
-  date: 2018-02-05
+  date: 2018-02-03
 
-- name: Bumpel 2
-  url: /assets/img/bumpels/bumpel_2.svg
+- name: Emmy
+  url: /assets/img/bumpels/bumpel_emmy.svg
   description: n/a
-  date: 2018-02-05
+  date: 2018-02-03
 
-- name: Bumpel 3
-  url: /assets/img/bumpels/bumpel_3.svg
+- name: Wilson
+  url: /assets/img/bumpels/bumpel_wilson.svg
   description: n/a
-  date: 2018-02-05
-
-- name: Bumpels4
-  url: http://via.placeholder.com/400x400
-  description: description4
-
-- name: Bumpels5
-  url: http://via.placeholder.com/100x100
-  description: description5
-
-- name: Bumpels6
-  url: http://via.placeholder.com/500x500
-  description: description6
+  date: 2018-02-03
