added rudimental lightbox

--- a/_data/gallery.yaml
+++ b/_data/gallery.yaml
@@ -1,17 +1,17 @@
 
 - name: George
   url: /assets/img/bumpels/bumpel_george.svg
-  description: n/a
+  description:
   date: 2018-02-03
 
 - name: Emmy
   url: /assets/img/bumpels/bumpel_emmy.svg
-  description: n/a
+  description:
   date: 2018-02-03
 
 - name: Wilson
   url: /assets/img/bumpels/bumpel_wilson.svg
-  description: n/a
+  description:
   date: 2018-02-03
 
 - name: Bumpels4
