--- a/.travis.yml
+++ b/.travis.yml
@@ -29,7 +29,7 @@ deploy:
   skip-cleanup: true
   github-token: $GITHUB_TOKEN
   local_dir: _site
-  keep-history: false
+  keep-history: true
   on:
     branch: master
   repo: simplyRoba/bumpels_site
