--- a/package.json
+++ b/package.json
@@ -2,23 +2,20 @@
     "name": "bumpels",
     "version": "1.0.0",
     "dependencies": {
-        "bootstrap": "^4.1.1"
+        "bootstrap": "4.1.1"
     },
     "devDependencies": {
-        "@types/jquery": "^3.3.2",
-        "concurrently": "^3.5.1",
-        "node-sass": "^4.9.0",
-        "typescript": "^2.8.4"
-    },
-    "scripts": {
-        "build": "npm run build-css && npm run build-js && bundle exec jekyll build",
-        "build-css": "node-sass --output-style compressed --include-path _sass _sass/main.scss assets/css/main.css",
-        "watch-css": "node-sass -w --output-style compressed --include-path _sass _sass/main.scss assets/css/main.css",
-        "build-js": "tsc -p .",
-        "watch-js": "npm run build-js -- -w",
-        "clean": "bundle exec jekyll clean",
-        "start": "npm run build && bundle exec jekyll serve",
-        "start-dev": "concurrently -n \"JEKYLL,CSS,JS\" -k \"npm run start -- --drafts\" \"npm run watch-css\" \"npm run watch-js\""
+        "@types/jquery": "3.3.2",
+        "concurrently": "3.5.1",
+        "del": "3.0.0",
+        "gulp": "4.0.0",
+        "gulp-shell": "0.6.5",
+        "gulp-sass": "4.0.1",
+        "gulp-sourcemaps": "2.6.4",
+        "gulp-tslint": "8.1.3",
+        "gulp-typescript": "4.0.2",
+        "tslint": "5.10.0",
+        "typescript": "2.8.4"
     },
     "author": "Axel Rojas Bachem"
 }
