--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "pump": "3.0.0",
         "gulp": "4.0.0",
         "gulp-uglify": "3.0.0",
+        "gulp-util": "3.0.8",
         "gulp-shell": "0.6.5",
         "gulp-sass": "4.0.1",
         "gulp-sourcemaps": "2.6.4",
