--- a/package.json
+++ b/package.json
@@ -1,26 +1,44 @@
 {
-    "name": "bumpels",
-    "version": "1.0.0",
-    "dependencies": {
-        "bootstrap": "4.3.1"
-    },
-    "devDependencies": {
-        "@types/jquery": "3.3.2",
-        "del": "3.0.0",
-        "gulp": "4.0.0",
-        "gulp-cssnano": "2.1.3",
-        "gulp-fontello": "0.4.6",
-        "gulp-imagemin": "4.1.0",
-        "gulp-sass": "4.0.1",
-        "gulp-shell": "0.6.5",
-        "gulp-sourcemaps": "2.6.4",
-        "gulp-tslint": "8.1.3",
-        "gulp-typescript": "4.0.2",
-        "gulp-uglify": "3.0.0",
-        "gulp-util": "3.0.8",
-        "pump": "3.0.0",
-        "tslint": "5.10.0",
-        "typescript": "2.8.4"
-    },
-    "author": "Axel Rojas Bachem"
+  "name": "bumpels",
+  "private": true,
+  "description": "Hi, we are the Bumpels.",
+  "version": "2.0.0",
+  "author": "Axel Rojas Bachem",
+  "dependencies": {
+    "gatsby": "^2.21.37",
+    "gatsby-image": "^2.4.4",
+    "gatsby-plugin-manifest": "^2.4.5",
+    "gatsby-plugin-offline": "^3.2.3",
+    "gatsby-plugin-react-helmet": "^3.3.1",
+    "gatsby-plugin-sharp": "^2.6.4",
+    "gatsby-source-filesystem": "^2.3.4",
+    "gatsby-transformer-sharp": "^2.5.2",
+    "prop-types": "^15.7.2",
+    "react": "^16.12.0",
+    "react-dom": "^16.12.0",
+    "react-helmet": "^6.0.0"
+  },
+  "devDependencies": {
+    "prettier": "2.0.5"
+  },
+  "keywords": [
+    "gatsby"
+  ],
+  "license": "MIT",
+  "scripts": {
+    "build": "gatsby build",
+    "develop": "gatsby develop",
+    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "start": "npm run develop",
+    "serve": "gatsby serve",
+    "clean": "gatsby clean",
+    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\" && exit 1"
+  },
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/simplyRoba/bumpels"
+  },
+  "bugs": {
+    "url": "https://github.com/simplyRoba/bumpels/issues"
+  }
 }
