--- a/package.json
+++ b/package.json
@@ -1,10 +1,18 @@
 {
-  "name": "bumpels",
+  "name": "bumpels.de",
   "private": true,
-  "description": "Hi, we are the Bumpels.",
+  "description": "Home of the Bumpels. Bumpels are sweet little creatures. There are many different ones and all of them want new friends.",
   "version": "2.0.0",
   "author": "Axel Rojas Bachem",
   "dependencies": {
+    "@fortawesome/fontawesome-svg-core": "^1.2.28",
+    "@fortawesome/free-brands-svg-icons": "^5.13.0",
+    "@fortawesome/free-solid-svg-icons": "^5.13.0",
+    "@fortawesome/react-fontawesome": "^0.1.9",
+    "animate.css": "^4.1.0",
+    "bootstrap": "^4.5.0",
+    "emergence.js": "^1.1.2",
+    "font-awesome": "^4.7.0",
     "gatsby": "^2.21.37",
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-catch-links": "^2.3.2",
@@ -16,22 +24,35 @@
     "gatsby-source-filesystem": "^2.3.4",
     "gatsby-transformer-remark": "^2.8.12",
     "gatsby-transformer-sharp": "^2.5.2",
+    "modern-normalize": "^0.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
+    "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
     "react-helmet": "^6.0.0"
   },
   "devDependencies": {
-    "prettier": "2.0.5"
+    "@types/node": "^12.12.11",
+    "@types/react": "^16.9.11",
+    "@types/react-dom": "^16.9.4",
+    "@typescript-eslint/eslint-plugin": "^2.8.0",
+    "@typescript-eslint/parser": "^2.8.0",
+    "eslint": "^5.16.0",
+    "eslint-config-prettier": "^6.11.0",
+    "eslint-plugin-prettier": "^3.1.3",
+    "prettier": "2.0.5",
+    "typescript": "^3.9.2"
   },
   "keywords": [
-    "gatsby"
+    "gatsby",
+    "simplyroba",
+    "bumpels"
   ],
   "license": "MIT",
   "scripts": {
     "build": "gatsby build",
     "develop": "gatsby develop",
-    "format": "prettier --write \"**/*.{js,jsx,json,md}\"",
+    "format": "prettier --write \"**/*.{js,jsx,tsx,json,md}\"",
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
