--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "@fortawesome/free-brands-svg-icons": "^5.13.0",
     "@fortawesome/free-solid-svg-icons": "^5.13.0",
     "@fortawesome/react-fontawesome": "^0.1.9",
+    "@mdx-js/mdx": "^1.6.4",
+    "@mdx-js/react": "^1.6.4",
     "animate.css": "^4.1.0",
     "bootstrap": "^4.5.0",
     "emergence.js": "^1.1.2",
@@ -17,13 +19,15 @@
     "gatsby-image": "^2.4.4",
     "gatsby-plugin-catch-links": "^2.3.2",
     "gatsby-plugin-manifest": "^2.4.5",
+    "gatsby-plugin-mdx": "^1.2.12",
     "gatsby-plugin-offline": "^3.2.3",
     "gatsby-plugin-react-helmet": "^3.3.1",
     "gatsby-plugin-sass": "^2.3.2",
-    "gatsby-plugin-sharp": "^2.6.4",
+    "gatsby-plugin-sharp": "^2.6.9",
+    "gatsby-remark-images": "^3.3.8",
     "gatsby-source-filesystem": "^2.3.4",
-    "gatsby-transformer-remark": "^2.8.12",
     "gatsby-transformer-sharp": "^2.5.2",
+    "jquery": "^3.5.1",
     "modern-normalize": "^0.6.0",
     "node-sass": "^4.14.1",
     "react": "^16.12.0",
