--- a/package.json
+++ b/package.json
@@ -33,7 +33,8 @@
     "react": "^16.12.0",
     "react-bootstrap": "^1.0.1",
     "react-dom": "^16.12.0",
-    "react-helmet": "^6.0.0"
+    "react-helmet": "^6.0.0",
+    "remark-emoji": "^2.1.0"
   },
   "devDependencies": {
     "prettier": "2.0.5"
