--- a/.travis.yml
+++ b/.travis.yml
@@ -17,7 +17,7 @@ notifications:
 
 deploy:
   provider: pages
-  cleanup: true
+  skip_cleanup: true
   github-token: $GITHUB_TOKEN
   local_dir: public
   keep-history: true
