--- a/package.json
+++ b/package.json
@@ -37,6 +37,12 @@
     "remark-emoji": "^2.1.0"
   },
   "devDependencies": {
+    "@testing-library/jest-dom": "^5.9.0",
+    "@testing-library/react": "^10.0.4",
+    "babel-jest": "^26.0.1",
+    "babel-preset-gatsby": "^0.4.7",
+    "identity-obj-proxy": "^3.0.0",
+    "jest": "^26.0.1",
     "prettier": "2.0.5"
   },
   "keywords": [
@@ -52,7 +58,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
-    "test": "echo \"Write tests! -> https://gatsby.dev/unit-testing\""
+    "test": "jest"
   },
   "repository": {
     "type": "git",
