--- a/package.json
+++ b/package.json
@@ -57,6 +57,7 @@
     "start": "npm run develop",
     "serve": "gatsby serve",
     "clean": "gatsby clean",
+    "update-test": "jest -u",
     "test": "jest"
   },
   "repository": {
