--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -1,12 +1,11 @@
 # This workflow will do a clean install of node dependencies, build the source code and run tests across different versions of node
 # For more information see: https://help.github.com/actions/language-and-framework-guides/using-nodejs-with-github-actions
 
-name: Node.js CI
+name: Build and test
 
 on: 
   push :
-  pull_request:
-    branches: [ master ]
+    branches-ignore: master
 
 jobs:
   build:
@@ -15,12 +14,15 @@ jobs:
 
     steps:
     - uses: actions/checkout@v2
-    - name: Use Node.js ${{ matrix.node-version }}
+    - name: Use Node.js 
       uses: actions/setup-node@v1
       with:
         node-version: '10.x'
-    - run: npm install -g gatsby-cli
-    - run: npm ci
-    - run: npm run clean
-    - run: npm run build
+    - name: Install & Build 
+    - run: |
+        npm install -g gatsby-cli
+        npm ci
+        npm run clean
+        npm run build
+    - name: Test
     - run: npm run test
