--- a/.github/workflows/build-test-and-deploy.yml
+++ b/.github/workflows/build-test-and-deploy.yml
@@ -19,19 +19,19 @@ jobs:
       with:
         node-version: '10.x'
     - name: Install & Build 
-    - run: |
+      run: |
         npm install -g gatsby-cli
         npm ci
         npm run clean
         npm run build
     - name: Test
-    - run: npm run test
+      run: npm run test
     - name: Deploy
-        uses: JamesIves/github-pages-deploy-action@3.5.9 # https://github.com/marketplace/actions/deploy-to-github-pages
-        with:
-          ACCESS_TOKEN: ${{ secrets.BUMPELS_SITE_ACCESS_TOKEN }}
-          BRANCH: master # The branch the action should deploy to.
-          FOLDER: public # The folder the action should deploy.
-          REPOSITORY_NAME: simplyRoba/bumpels_site # Repository name 
-          SINGLE_COMMIT: false # Do maintain history on target branch
+      uses: JamesIves/github-pages-deploy-action@3.5.9 # https://github.com/marketplace/actions/deploy-to-github-pages
+      with:
+        ACCESS_TOKEN: ${{ secrets.BUMPELS_SITE_ACCESS_TOKEN }}
+        BRANCH: master # The branch the action should deploy to.
+        FOLDER: public # The folder the action should deploy.
+        REPOSITORY_NAME: simplyRoba/bumpels_site # Repository name 
+        SINGLE_COMMIT: false # Do maintain history on target branch
 
