--- a/.github/workflows/build-and-test.yml
+++ b/.github/workflows/build-and-test.yml
@@ -19,10 +19,10 @@ jobs:
       with:
         node-version: '10.x'
     - name: Install & Build 
-    - run: |
+      run: |
         npm install -g gatsby-cli
         npm ci
         npm run clean
         npm run build
     - name: Test
-    - run: npm run test
+      run: npm run test
